maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:29: error: '(' expected but identifier found.
      if murDroite() {
         ^RandomMouseMaze:37: error: illegal start of simple expression
    }
    ^